samples/_failures_safe/1761790366_a28f24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_677e4525.c: In function ‘main’:
./samples/SAFE/__tmp_677e4525.c:168:16: error: expected expression at end of input
  168 |                tokens[i].line,
      |                ^~~~~~
./samples/SAFE/__tmp_677e4525.c:168:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_677e4525.c:168:16: error: expected declaration or statement at end of input
